--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,11 @@
 root = true
 
 [*]
-indent_style = tab
+indent_style = space
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[package.json]
-indent_style = space
-indent_size = 2
-
-[*.md]
+[*.{md,markdown}]
 trim_trailing_whitespace = false
