--- a/.github/workflows/continuous-deployment-workflow.yml
+++ b/.github/workflows/continuous-deployment-workflow.yml
@@ -74,7 +74,7 @@ jobs:
           job_name: re-frame-async-flow-fx Deployment
           channel: '#oss-robots'
           mention: 'channel'
-          mention_if: 'always'
+          mention_if: 'failure'
           url: ${{ secrets.SLACK_WEBHOOK }}
           commit: true
           token: ${{ secrets.GITHUB_TOKEN }}
