--- a/.github/workflows/continuous-deployment-workflow.yml
+++ b/.github/workflows/continuous-deployment-workflow.yml
@@ -82,7 +82,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: ${{ github.ref }}
           body: |
-            [Changelog](https://github.com/day8/re-frame-async-flow-fx/blob/${{ github.ref }}/CHANGELOG.md)
+            [Changelog](https://github.com/day8/re-frame-async-flow-fx/blob/master/CHANGELOG.md)
           draft: false
           prerelease: false
       - name: Slack notification
